# Predictive-Model-for-French-Presidential-Election

./: README.md  best_params.pkl  classification_model.pkl  cv_scores.pkl  mean_cv_score.pkl  pyproject.toml  streamlit_app.py
.obsidian/: graph.json  workspace.json
app/: main.py
app/clean/: security_clean.py
app/eda/: election_2017_eda.py  election_2022_eda.py  employment_eda.py  security_eda.py  temp.py
app/merge/: employment_merge.py
app/model/: classification_model.pkl  predict.py  prediction-samples-2017-2.csv  prediction_model.py  xgboost_model.py
datasets/: ResMetBE16.xlsx  ResMetBE17.xlsx  election-2022-cleaned.csv  election-dataset-2017-cleaned.csv  election-dataset-2022-cleaned.csv  election-dataset-2022.csv  employment-dataset-2015-cleaned.csv  employment-dataset-2017-cleaned.csv  final_merged_data_3_years.csv  final_merged_data_for_training_cleaned.csv  prediction-samples-2017-3.csv  security-historic-dataset-cleaned.csv  security-historic-dataset.xlsx
datasets/Employment dataset/: employment-dataset-2016-cleaned.csv  employment-dataset-2017-cleaned.csv  employment-dataset-2020-cleaned.csv  merged-employment-dataset.csv
datasets/archive/: dataset-for-making-predictions-2017.csv
docs/: Datasets.md  EDA.md  Main Notes.md  Model Metrics.md  Prompts.md  Strategy.md  mcd.md
saved_models/: classification_model.pkl  neural_network_model_12.3754.h5  random_forest_model_0.7272727272727273.joblib
saved_models/archive/: neural_network_model_12.8943.h5  neural_network_model_12.9290.h5  neural_network_model_12.9693.h5  neural_network_model_13.5831.h5  (+1 more)
(+2 files in other folders)
