[tool.poetry]
name = "mpsr-data"
version = "0.1.0"
description = "Predictive Model for French Presidential Election"
authors = ["AhmedKhchai <a.khchai@gmail.com>"]
readme = "README.md"
packages = [{include = "mpsr_data"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
seaborn = "^0.12.2"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
