[tool.poetry]
name = "mpsr-data"
version = "0.1.0"
description = "Predictive Model for French Presidential Election"
authors = ["AhmedKhchai <a.khchai@gmail.com>"]
readme = "README.md"
packages = [{include = "mpsr_data"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
seaborn = "^0.12.2"
pandas = "^2.0.3"
plotly = "^5.15.0"
chardet = "^5.2.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
